<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.VerifyOTPActivity">

    <TextView
        android:id="@+id/text_otp_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/otp_verification_screen"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.chaos.view.PinView
        android:id="@+id/firstPinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:inputType="number"
        android:itemBackground="@color/white"
        android:textColor="@color/black"
        app:cursorColor="@color/black"
        app:cursorWidth="2dp"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemRadius="10dp"
        app:itemSpacing="10dp"
        app:itemWidth="48dp"
        app:lineColor="@color/black"
        app:lineWidth="2dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/text_otp_screen"
        app:layout_constraintBottom_toTopOf="@id/button_otp_verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/button_otp_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verify_otp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="12dp"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="@id/firstPinView"
        app:layout_constraintEnd_toEndOf="@id/firstPinView"
        app:layout_constraintTop_toBottomOf="@id/firstPinView"
        app:layout_constraintBottom_toTopOf="@id/text_resent_otp"/>

    <TextView
        android:id="@+id/text_resent_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/resent_otp"
        android:textColor="@color/black"
        android:gravity="center"
        android:visibility="invisible"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintStart_toStartOf="@id/button_otp_verify"
        app:layout_constraintEnd_toEndOf="@id/button_otp_verify"
        app:layout_constraintTop_toBottomOf="@id/button_otp_verify"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>