<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SignUpActivity">
    <TextView
        android:id="@+id/text_registration_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registration_screen"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view_phoneNumber"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/edit_background"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_registration_screen"
        app:layout_constraintBottom_toTopOf="@id/button_sent_otp"/>

    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:ccp_hideNameCode="true"
        app:ccp_showFullName="false"
        app:ccp_defaultCode="91"
        app:ccp_showFlag="false"
        android:gravity="center"
        android:layout_marginStart="20dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/view_phoneNumber"
        app:layout_constraintEnd_toStartOf="@id/ePhoneNumber"
        app:layout_constraintTop_toTopOf="@id/view_phoneNumber"
        app:layout_constraintBottom_toBottomOf="@id/view_phoneNumber"/>

    <EditText
        android:id="@+id/ePhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="none"
        android:hint="@string/mobile_number"
        android:includeFontPadding="false"
        android:inputType="phone"
        android:maxLength="10"
        android:minHeight="48dp"
        android:layout_marginStart="10dp"
        android:textColorHint="#757575"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/view_phoneNumber"
        app:layout_constraintBottom_toBottomOf="@id/view_phoneNumber"
        app:layout_constraintEnd_toEndOf="@id/view_phoneNumber"
        app:layout_constraintStart_toEndOf="@id/ccp" />


    <TextView
        android:id="@+id/button_sent_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sent_otp"
        android:padding="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        app:layout_constraintStart_toStartOf="@id/view_phoneNumber"
        app:layout_constraintEnd_toEndOf="@id/view_phoneNumber"
        app:layout_constraintTop_toBottomOf="@id/view_phoneNumber"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>