<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/black"
    tools:context=".activities.ChatsActivity">

    <View
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_content_top"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layoutSend"/>

    <ImageView
        android:id="@+id/image_chat_app_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_round_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/image_chat_app_back"
        app:layout_constraintEnd_toStartOf="@id/image_chat_user_info"
        app:layout_constraintTop_toTopOf="@id/image_chat_app_back"
        app:layout_constraintBottom_toBottomOf="@id/image_chat_app_back"/>

    <ImageView
        android:id="@+id/image_chat_user_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_round_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_chat_app_back"/>

    <TextView
        android:id="@+id/text_user_availability"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/online"
        android:textColor="@color/white"
        android:background="#4CAF50"
        android:gravity="center"
        android:visibility="gone"
        android:padding="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_chat_app_back"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:stackFromEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/text_user_availability"
        app:layout_constraintBottom_toBottomOf="@id/viewBackground"/>

    <ProgressBar
        android:id="@+id/chatProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <FrameLayout
        android:id="@+id/layoutSend"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_chat_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:padding="10dp"
            android:src="@drawable/ic_round_send"
            app:tint="@color/white"/>
    </FrameLayout>

    <EditText
        android:id="@+id/eInputUserMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="12dp"
        android:hint="@string/type_here"
        android:textColorHint="#BABABA"
        android:inputType="text"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toStartOf="@id/layoutSend"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/layoutSend"/>

</androidx.constraintlayout.widget.ConstraintLayout>